header fix on narrow widths

--- a/src/styles/partials/media.less
+++ b/src/styles/partials/media.less
@@ -757,7 +757,7 @@
       }
       .sub-lead {
         .popup-stroke {
-          line-height: 6vw;
+          line-height: 6.5vw;
         }
       }
     }
